@@ -1,5 +1,11 @@
 2015-01-28  Julien Bect  <julien.bect@supelec.fr>
 
+	stk_predict.m: Compute lambda_mu and RS only when necessary
+
+	* core/stk_predict.m: Compute lambda_mu and RS only when
+	necessary, depending on the number of output arguments. Add unit
+	tests.
+
 	stk_param_init.m: Handle the heteroscedastic case
 
 	* paramestim/stk_param_init.m: Handle the heteroscedastic case
